<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <group android:checkableBehavior="single">
        <group android:checkableBehavior="single">
            <item android:id="@+id/home"
                android:title="@string/home"
                android:checked="true"

                android:icon="@drawable/ic_home_black_24dp"/></group>
        <group android:checkableBehavior="single">
            <item android:id="@+id/myorder"
                android:title="@string/My_Orders"
                android:icon="@drawable/shop"/></group>
        <group android:checkableBehavior="single">
            <item android:id="@+id/Save"
                android:title="@string/save_nav"
                android:icon="@drawable/ic_favorite"/></group>
        <group android:checkableBehavior="single">
            <item android:id="@+id/offer"
                android:title="@string/offer"
                android:icon="@drawable/local_offer"/></group>



        <group android:checkableBehavior="single">
            <item android:id="@+id/language"

                android:title="@string/language"
                android:icon="@drawable/langicon"/></group>

        <group android:checkableBehavior="single">
            <item android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"/></group>
    </group>
</menu>