<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    >


    <androidx.cardview.widget.CardView
        android:id="@+id/card_delivery_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:cardCornerRadius="30dp"
        app:cardElevation="5dp"
        app:contentPadding="15dp"

        >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"


    >

        <ImageView
            android:id="@+id/image_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/del"

            />

        <TextView
        android:id="@+id/tv_thanks"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/image_del"
    android:layout_centerHorizontal="true"
    android:text="@string/thank_you"
    android:textColor="@color/color_text"
    android:textStyle="bold"
    android:textSize="24sp"
    android:layout_marginTop="5dp"

    />
    <TextView
        android:id="@+id/tv_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_thanks"
        android:layout_centerHorizontal="true"
        android:text="@string/your_order_is_successfully"
        android:textColor="@color/color_text"
        android:layout_marginTop="5dp"

        />
    <Button

        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/wight"
        android:background="@drawable/rec_small"
        android:layout_below="@+id/tv_order"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"

        />
</RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>