<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wight"
    tools:context=".Checkout">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"


        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <TextView
            android:id="@+id/meal_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/checkout"

            android:textColor="@color/wight"


            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="gotocart"
            android:src="@drawable/arrow_back" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/btns_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:contentPadding="15dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"

            >

            <TextView
                android:id="@+id/btn_delivery_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/rec_btn"
                android:text="@string/delivery"

                android:gravity="center"
                android:textColor="@color/wight"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_payment_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rec__btn_gray"
                android:text="@string/payment"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/color_text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_summary_toolbar"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rec__btn_gray"
                android:text="@string/summary"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/color_text"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/card_PAYMENT"
        android:layout_below="@id/btns_card">

        <FrameLayout
            android:id="@+id/fr_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_PAYMENT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:contentPadding="15dp"

        >

        <Button
            android:id="@+id/btn_chechout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rec_btn"


            android:text="@string/payment_btn"
            android:textColor="@color/wight"

            android:textSize="24dp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>

</RelativeLayout>